Fixed flex-direction to align expansion cards

--- a/src/components/Main/ExpansionsContainer/ExpansionsContainer.css
+++ b/src/components/Main/ExpansionsContainer/ExpansionsContainer.css
@@ -8,6 +8,7 @@
   padding: 10px;
   width: 200px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
